--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     height: 100vh;
     padding: 0;
     margin: 0;
-    background: linear-gradient(to bottom right,rgb(36, 123, 247),rgb(35, 53, 209),rgb(12, 3, 87),rgb(6, 1, 48) );
+    background: linear-gradient(to bottom right,rgb(36, 123, 247),rgb(35, 53, 209),rgb(12, 3, 87),rgb(6, 1, 48));
     /* background-color: #031546; */
     display:flex;
     flex-direction: column;
@@ -13,7 +13,7 @@ h1{
     text-align: center;
     color: rgb(197, 108, 108);
     font-size:xx-large;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 
 #mainbox{
@@ -35,16 +35,6 @@ h1{
     margin-bottom: 0;
 }
 
-/* #screen{
-    background-color: aqua;
-    border: black 2px solid; 
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    overflow: auto;
-} */
 .input{
     height: 50%;
     /* border: red 2px solid; */
@@ -55,9 +45,6 @@ h1{
     color: azure;
     overflow:auto;
 }
-/* .input:focus{
-    box-shadow: 0 0 0.7rem rgb(237, 187, 95)
-} */
 .output{
     /*border: green 2px solid;*/
     width: 100%;
@@ -98,3 +85,15 @@ h1{
     box-shadow: 0 0 0.8rem red;
 }
 
+
+footer{
+    width: 100vw;
+    text-align: center;
+    color: aliceblue;
+}
+
+#github,#linkedin{
+    background-color: aliceblue;
+    width: 18px;
+    height: 18px;
+  }
